--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,57 @@
-Create a button in index.handlebars that will submit the user input into the database.
+<h1>Eat-Da-Burger!</h1>
 
+<h2>burgers to be eaten</h2>
+<li>
+  {{#each burgers}}
+  <p>
+    {{this.id}}. {{this.burger_name}}
 
-{{!-- <h1>Cats!</h1>
+    <button data-burgerid="{{this.id}}" class="delburger">Devour it!</button>
+  </p>
+  {{/each}}
+</li>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>burger that have been eaten</h2>
 
 <ul>
+  {{#each burgers}}
+  {{#if devoured}}
+  {{!-- {{> burgers/burger-block devoured=true}} --}}
+  {{/if}}
+  {{/each}}
+</ul>
+
+
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="bn"></label>
+    <input type="text" id="bn" name="name">
+  </div>
+
+  {{!-- <div class="form-group">
+    <label for="sleepy">Sleepy?</label><br>
+    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
+    <input type="radio" name="sleepy" value="0"> Awake
+  </div> --}}
+
+  <button type="submit">Submit</button>
+</form>
+<h4>Enter a burger you want to eat and then "click" the submit button!</h4>
+
+{{!-- <form id="createBurger" class="button-size" devoured="false">
+  <textarea type="text" name="burger"></textarea>
+  <button type="submit">Submit</button>
+</form>
+<h4>Enter a burger you want to eat and then "click" the submit button!</h4> --}}
+
+
+{{!-- 
+<ul>
   {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
-    {{/unless}}
+  {{#unless sleepy}}
+  {{> cats/cat-block sleep=true}}
+  {{/unless}}
   {{/each}}
 </ul>
 
@@ -17,25 +59,8 @@ Create a button in index.handlebars that will submit the user input into the dat
 
 <ul>
   {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
-    {{/if}}
+  {{#if sleepy}}
+  {{> cats/cat-block sleep=false}}
+  {{/if}}
   {{/each}}
-</ul>
-
-<h2>Add a Cat</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Cat Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div>
-
-  <button type="submit">Add Cat</button>
-</form> --}}
+</ul> --}}
