--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,66 +1,36 @@
 <h1>Eat-Da-Burger!</h1>
 
 <h2>burgers to be eaten</h2>
-<li>
+
+<ul>
   {{#each burgers}}
+  {{#unless devoured}}
   <p>
     {{this.id}}. {{this.burger_name}}
-
     <button data-burgerid="{{this.id}}" class="delburger">Devour it!</button>
   </p>
+  {{/unless}}
   {{/each}}
-</li>
+</ul>
 
 <h2>burger that have been eaten</h2>
 
 <ul>
   {{#each burgers}}
   {{#if devoured}}
-  {{!-- {{> burgers/burger-block devoured=true}} --}}
+  <p>
+    {{this.id}}. {{this.burger_name}}
+  </p>
   {{/if}}
   {{/each}}
 </ul>
 
-
 <form class="create-form">
-
   <div class="form-group">
     <label for="bn"></label>
     <input type="text" id="bn" name="name">
   </div>
-
-  {{!-- <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div> --}}
-
   <button type="submit">Submit</button>
 </form>
+
 <h4>Enter a burger you want to eat and then "click" the submit button!</h4>
-
-{{!-- <form id="createBurger" class="button-size" devoured="false">
-  <textarea type="text" name="burger"></textarea>
-  <button type="submit">Submit</button>
-</form>
-<h4>Enter a burger you want to eat and then "click" the submit button!</h4> --}}
-
-
-{{!-- 
-<ul>
-  {{#each cats}}
-  {{#unless sleepy}}
-  {{> cats/cat-block sleep=true}}
-  {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Cats that are sleepy!</h2>
-
-<ul>
-  {{#each cats}}
-  {{#if sleepy}}
-  {{> cats/cat-block sleep=false}}
-  {{/if}}
-  {{/each}}
-</ul> --}}
