--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,10 @@
+<div id="burger">
+<img src="assets/img/hamburger.png" alt="burger">
 <h1>Eat-Da-Burger!</h1>
+</div>
 
-<h2>burgers to be eaten</h2>
-
+<div id="toEat">
+<h2>burgers ready to eat</h2>
 <ul>
   {{#each burgers}}
   {{#unless devoured}}
@@ -12,9 +15,10 @@
   {{/unless}}
   {{/each}}
 </ul>
+</div>
 
-<h2>burger that have been eaten</h2>
-
+<div id="eaten">
+<h2>devoured burgers</h2>
 <ul>
   {{#each burgers}}
   {{#if devoured}}
@@ -24,13 +28,14 @@
   {{/if}}
   {{/each}}
 </ul>
+</div>
 
 <form class="create-form">
   <div class="form-group">
     <label for="bn"></label>
     <input type="text" id="bn" name="name">
-  </div>
   <button type="submit">Submit</button>
+  <h4>Enter a burger you want to eat and then "click" the submit button!</h4>
+  </div>
 </form>
 
-<h4>Enter a burger you want to eat and then "click" the submit button!</h4>
