--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,42 @@
 body {
     background-color: burlywood;
 }
+
+#burger {
+    margin: auto;
+    width: 25%;
+    padding: 10px;
+}
+
+img {
+    width:200px; 
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;  
+}
+
+#toEat {
+    float:left;
+    width: 300px;
+    padding: 10px;
+}
+
+#eaten {
+    float: right;
+    margin: auto;
+    width: 25%;
+    padding: 10px;
+}
+
+.form-group {
+    margin: auto;
+    width: 25%;
+    padding: 10px;
+ }
+
+h2 {
+    color: red;
+}
+
+
+
